--- a/index.html
+++ b/index.html
@@ -929,14 +929,14 @@ a.btn-secondary img {
                             <table class="grid" cellspacing="0" cellspadding="0" border="0">
                               <tr mc:repeatable>
                                 <td class="pelmel">
-                                  <div mc:edit="pelmel-item-1">
+                                  <div>
                                     <table>
                                       <tr style="height:5px">
                                         <td></td>
                                       </tr>
                                       <tr>
                                         <td>
-                                          <h4>Kiwi se vrací do hry</h4>
+                                          <h4 mc:edit="pelmel-item-1">Kiwi se vrací do hry</h4>
                                         </td>
                                       </tr>
                                       <tr style="height:5px">
